2014-03-17 Roman
- SYS: AMRDevs module is added to openscada_mod.spec.
- FIX:DAQ.JavaLikeCalc: External function bind fix for return process.
- FIX:Transport.Sockets: Default symbol timeout of output transport is set from 0.01 to 0.1 for fix some unstable connection
    through VPN.
- UI.{VCAEngine,Vision,WebVision}: The primitive "Text" is moved to indexes from types.h.
- FIX:UI.Vision: New concept for selectable attribute's value obtain, for IDs set.


2014-03-14 Roman
- !:DAQ.AMRDevs: Enable build by default. Some description and translation fix.
- DAQ.OPC_UA: TranslateBrowsePathsToNodeIds is rewrote to use Browse service backend for hierarchical find path's items.
- DAQ.System: Set attributes to EVAL is expanded for separated fields.
- Transport.Sockets: Connections frequence limit disabled by problems for some usings.


2014-03-13 Roman
- FIX:Transport.Sockets: Connections frequence limit fix for ConectTimeout into miliseconds.
- FIX:DAQ.LogicLev: Reflection type is fixed and expanded for connection to target parameter update and attributes list sync
    into calc period.


2014-03-12 Roman
- DAQ.ModBus: Remove connection try from controller's object start().
- DAQ.OPC_UA: TranslateBrowsePathsToNodeIds is implement for hierachical part (OpcUa_HierarchicalReferences) request process.
- Transport.Sockets: Connections frequence is limited to 2xConectTimeout, for hangs at connection timeouts decrease.
- FIX:UI.Vision: Disable AcceptTouchEvents for primitive "Document", implement by WebKit, for fix Mouse events lock at some sensors.


2014-03-11 Roman
- DAQ.Comedi: Several subdevices into equal types support is added, like for TTL and relay DIO.


2014-03-07 Roman
- DAQ.OPC_UA: OpcUa_Server_NamespaceArray append into OpenSCADA module is added. NS_OPC_UA(0) and NS_SERVER(1) is added.
    Browse allow is added for zero ReferenceTypeId.


2014-03-06 Roman
- DAQ.OPC_UA: Some NameSpaces using ordered and sync to 2055 content. For OpenSCADA_DAQ_NS set index 2.